fixed alignment issue of sidebar

--- a/styles/elements/Header.module.scss
+++ b/styles/elements/Header.module.scss
@@ -77,8 +77,8 @@
     .crossButton {
       font-weight: 700;
       position: absolute;
-      top: 25px;
-      right: 25px;
+      top: 15px;
+      right: 18px;
       font-size: 1rem;
       margin-left: 50px;
     }
@@ -97,7 +97,7 @@
     }
     .open {
       padding: 2rem;
-      width: 90% !important;
+      width: 92% !important;
     }
     .linkContainer {
       font-size: 1.3rem;
