--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,10 @@
   fill: black !important;
 }
 
+.MuiStepLabel-iconContainer > .MuiStepIcon-active > circle {
+  stroke: black;
+}
+
 @media screen and (min-width: 769px) {
   .mobile-layout {
     display: none;
